# rpatest

./: .gitignore  LICENSE  SCOPE.md  pyproject.toml  requirements.txt  setup_demo.py  注文書（発注書）.docx
config/: action_mapping.yaml  settings.yaml
docs/: harmonic_migration_method.html  hmm_ai_agent_architecture.html  hmm_saas_architecture.html
gui/: __init__.py  app.py  generate_sample_robots.py
gui/pages/: dashboard.py  phase1_page.py  phase2_page.py  phase3_page.py  phase4_page.py  phase5_page.py  robot_list.py  settings_page.py
hmm-saas/: package-lock.json  package.json
migration_framework/: __init__.py  cli.py  pipeline.py
migration_framework/common/: config.py  models.py
migration_framework/db/: __init__.py  migration_db.py
migration_framework/phase1_analyzer/: __init__.py  analyzer.py  classifier.py  complexity.py  dependency.py  parser.py
migration_framework/phase2_converter/: __init__.py  ast_builder.py  converter.py  mapping_engine.py  xaml_generator.py
migration_framework/phase3_validator/: __init__.py  best_practice_checker.py  diff_detector.py  naming_checker.py  syntax_checker.py  validator.py
migration_framework/phase4_tester/: __init__.py  akabot_client.py  comparator.py  reporter.py  test_runner.py  tester.py
migration_framework/phase5_deployer/: __init__.py  deployer.py  environment_manager.py  health_checker.py  orchestrator_client.py  package_builder.py
samples/: test_cases.yaml
tools/: bot_management_sheet.html  business_function_designer.html  customer_portal.html  migration_tracker.html  review_portal.html
(+132 files in other folders)
