[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "insight-migration"
version = "1.0.0"
description = "InsightMigration - RPA移行自動化フレームワーク (BizRobo → aKaBot)"
authors = [
    {name = "HarmonicInsight / FPT Consulting Japan"},
]
license = {text = "Proprietary"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "lxml>=4.9",
    "jinja2>=3.1",
    "requests>=2.31",
    "openpyxl>=3.1",
    "pytest>=7.4",
    "rich>=13.0",
    "click>=8.1",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[project.scripts]
migrate = "migration_framework.cli:main"

[tool.setuptools.packages.find]
include = ["migration_framework*"]
